Thu Jan  7 18:56:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_array.cpp
        * TAO_IDL/be/be_interface.cpp
        * TAO_IDL/be/be_operation_strategy.cpp
        * TAO_IDL/be/be_visitor_interface/amh_ss.cpp
        * TAO_IDL/be/be_visitor_interface/interface.cpp
        * TAO_IDL/be/be_visitor_interface/interface_is.cpp
          Initialise pointers with 0, small layout changes

Thu Jan  7 18:45:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_ami4ccm_pre_proc.cpp:
          Added some more code for implicit sendc_ ports

        * TAO_IDL/be/be_visitor_ami_pre_proc.cpp:
          Fixed typos

        * TAO_IDL/be_include/be_interface_strategy.h:
          Layout changes

Thu Jan  7 11:04:58 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tests/OBV/Supports/Supports_Test.mpc:
          Reinstated dummy_label dependency.

        * bin/tao_orb_tests.lst:
          Disabled the OBV/Supports test again since there Solaris compilers
          as well as CB2010 do not grok the TAO code for valuetype 'supports'
          constructs and there is currently no budget to fix this.
          This will need to be resolved at some time by either compiler fixes
          or a redesign of the TAO valuetype framework.

Thu Jan  7 10:44:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/ast/ast_component.cpp
        * TAO_IDL/be/be_codegen.cpp
        * TAO_IDL/be/be_global.cpp
        * TAO_IDL/be/be_produce.cpp
        * TAO_IDL/be/be_visitor_ami4ccm_pre_proc.cpp
        * TAO_IDL/be/be_visitor_arg_traits.cpp
        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp
        * TAO_IDL/be_include/be_global.h
        * TAO_IDL/be_include/be_visitor_ami4ccm_pre_proc.h
        * TAO_IDL/include/ast_component.h
          Committing the initial files for the ami4ccm visitors
          which should create all implied nodes for ami4ccm.
          This can be enabled using the new -GM option.
