@@ -1,3 +1,12 @@
+Fri Jan  8 10:12:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_uses.cpp:
+        * TAO_IDL/be_include/be_uses.h:
+          Added original_uses member
+
+        * TAO_IDL/be/be_visitor_ami4ccm_pre_proc.cpp:
+          Prevent recursion using the new original_uses member
+
 Thu Jan  7 18:56:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * TAO_IDL/be/be_array.cpp
